--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
 
     <title>Howland</title>
 
-    
+    <link rel="stylesheet" href="https://use.typekit.net/xqw4lxr.css">
     <link rel="stylesheet" href="asset/css/style.css?v=1.0.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="http://github.hubspot.com/odometer/odometer.js"></script>
   </head>
   <body>
 
+    <nav id="mainav">
+      <div class="container flex">
+          
+          <a href="">
+              <img src="asset/img/logo.svg" class="footerlogo adptv_">
+          </a>
+  
+          <a href="" class="compass_ flex c-flex hide_">
+              <img src="asset/img/compas.svg" class="adptv_">
+          </a>
+      </div>
+  </nav>
+
     <!-- passcode -->
-    <header class="accesscode">
+    <header class="fullhero">
       <img src="asset/img/Screen Shot 2022-11-15 at 9.18.16 AM.jpg" class="cover">
 
       <div class="content-bottom">
